[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/graphics/button/start.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/button/arrow_forward.gd" type="Script" id=2]

[node name="scene_two_images" type="Node2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="button" type="TextureButton" parent="."]
margin_right = 155.0
margin_bottom = 83.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="button" to="." method="_on_ToolButton_button_down"]
[connection signal="button_up" from="button" to="." method="_on_ToolButton_button_up"]
[connection signal="pressed" from="button" to="." method="_on_ToolButton_pressed"]
